[gd_scene load_steps=36 format=3 uid="uid://cd8vbm5in07ms"]

[ext_resource type="Script" path="res://legacy/scripts/player.gd" id="1_l262s"]
[ext_resource type="Texture2D" uid="uid://e00ivsu3q55" path="res://art/skate_board.png" id="4_8u2u4"]
[ext_resource type="Texture2D" uid="uid://mb2jxl47qfiw" path="res://art/test.png" id="4_kraqx"]
[ext_resource type="Texture2D" uid="uid://dyrin3naspfac" path="res://legacy/art/circle_light.png" id="5_v2men"]

[sub_resource type="CircleShape2D" id="CircleShape2D_fg8j0"]
radius = 19.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3kt5o"]
size = Vector2(14, 31)

[sub_resource type="Animation" id="Animation_nqlq0"]
resource_name = "Idle Back"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_hocer"]
resource_name = "Idle Back Ex"
length = 0.8
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_mcn8n"]
resource_name = "Idle Front"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_wu7di"]
resource_name = "Idle Front Ex"
length = 0.8
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_fpico"]
resource_name = "Idle Side"
length = 0.8
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_8rkne"]
resource_name = "Idle Side Ex"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_gefor"]
length = 0.001

[sub_resource type="Animation" id="Animation_iavnu"]
resource_name = "Sit"
length = 0.2
loop_mode = 1
step = 0.2

[sub_resource type="Animation" id="Animation_46l4o"]
resource_name = "Walk Back"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_b6582"]
resource_name = "Walk Back Ex"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_4brcd"]
resource_name = "Walk Front"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_n27hj"]
resource_name = "Walk Front Ex"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_71pq7"]
resource_name = "Walk Side"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="Animation" id="Animation_x0fas"]
resource_name = "Walk Side Ex"
length = 0.8
loop_mode = 1
step = 0.1

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vh35p"]
_data = {
"Idle Back": SubResource("Animation_nqlq0"),
"Idle Back Ex": SubResource("Animation_hocer"),
"Idle Front": SubResource("Animation_mcn8n"),
"Idle Front Ex": SubResource("Animation_wu7di"),
"Idle Side": SubResource("Animation_fpico"),
"Idle Side Ex": SubResource("Animation_8rkne"),
"RESET": SubResource("Animation_gefor"),
"Sit": SubResource("Animation_iavnu"),
"Walk Back": SubResource("Animation_46l4o"),
"Walk Back Ex": SubResource("Animation_b6582"),
"Walk Front": SubResource("Animation_4brcd"),
"Walk Front Ex": SubResource("Animation_n27hj"),
"Walk Side": SubResource("Animation_71pq7"),
"Walk Side Ex": SubResource("Animation_x0fas")
}

[sub_resource type="Curve" id="Curve_o3nam"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.840909, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5rn1i"]
curve = SubResource("Curve_o3nam")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_nydtp"]
particle_flag_disable_z = true
spread = 39.545
initial_velocity_min = 64.75
initial_velocity_max = 64.75
gravity = Vector3(0, -10, 0)
scale_min = 3.0
scale_max = 4.0
scale_curve = SubResource("CurveTexture_5rn1i")
color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_giw4s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ivlxs"]
resource_name = "grind_flash"
length = 0.2
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Polygon2D3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Polygon2D2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lp3yw"]
_data = {
"RESET": SubResource("Animation_giw4s"),
"grind_flash": SubResource("Animation_ivlxs")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_lmwpy"]
atlas = ExtResource("4_8u2u4")
region = Rect2(64, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3hik"]
atlas = ExtResource("4_8u2u4")
region = Rect2(32, 0, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p3d85"]
atlas = ExtResource("4_8u2u4")
region = Rect2(0, 0, 32, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_alc34"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lmwpy")
}],
"loop": true,
"name": &"grind",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3hik")
}],
"loop": true,
"name": &"kickflip",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p3d85")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_uwfmn"]
atlas = ExtResource("4_kraqx")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_eijco"]
atlas = ExtResource("4_kraqx")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_4oo3m"]
atlas = ExtResource("4_kraqx")
region = Rect2(0, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_mw6ll"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_uwfmn")
}],
"loop": true,
"name": &"grind",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_eijco")
}],
"loop": true,
"name": &"kickflip",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4oo3m")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}]

[node name="Player" type="CharacterBody2D" groups=["pixel perfect"]]
disable_mode = 2
floor_stop_on_slope = false
floor_max_angle = 1.309
script = ExtResource("1_l262s")

[node name="Interaction" type="Area2D" parent="." groups=["player interact"]]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interaction"]
position = Vector2(0, -18)
shape = SubResource("CircleShape2D_fg8j0")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -10.5)
shape = SubResource("RectangleShape2D_3kt5o")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vh35p")
}

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(0, -15)
energy = 0.1
texture = ExtResource("5_v2men")
texture_scale = 2.0
metadata/_edit_lock_ = true

[node name="Label" type="Label" parent="."]
offset_left = -20.0
offset_top = -67.0
offset_right = 20.0
offset_bottom = -44.0
horizontal_alignment = 1
vertical_alignment = 1

[node name="RayCast2D" type="RayCast2D" parent="."]
target_position = Vector2(0, 15)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
amount = 20
process_material = SubResource("ParticleProcessMaterial_nydtp")

[node name="GPUParticles2D2" type="GPUParticles2D" parent="."]
scale = Vector2(-1, 1)
process_material = SubResource("ParticleProcessMaterial_nydtp")

[node name="Marker2D" type="Marker2D" parent="."]
position = Vector2(-11.5, -16)

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_lp3yw")
}
autoplay = "grind_flash"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
top_level = true
z_index = -1
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_alc34")
animation = &"grind"
offset = Vector2(0, -3)

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -12)
sprite_frames = SubResource("SpriteFrames_mw6ll")
animation = &"grind"

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="."]
top_level = true
scale = Vector2(2, 2)
remote_path = NodePath("../AnimatedSprite2D")

[node name="Polygon2D2" type="Polygon2D" parent="."]
visible = false
color = Color(1, 1, 0, 1)
polygon = PackedVector2Array(-7, -4, -16, -9, -13, -2, -18, 0, -13, 0, -13, 5, -10, 2, -8, 7)

[node name="Polygon2D3" type="Polygon2D" parent="."]
visible = false
rotation = 3.14159
scale = Vector2(1, -1)
color = Color(1, 1, 0, 1)
polygon = PackedVector2Array(-7, -4, -16, -9, -13, -2, -18, 0, -13, 0, -13, 5, -10, 2, -8, 7)

[node name="WallRight" type="RayCast2D" parent="."]
position = Vector2(0, -17)
target_position = Vector2(100, 0)

[node name="WallRightReal" type="RayCast2D" parent="."]
position = Vector2(0, -17)
target_position = Vector2(14, 0)

[node name="WallLeft" type="RayCast2D" parent="."]
position = Vector2(0, -17)
target_position = Vector2(-100, 0)

[node name="WallLeftReal" type="RayCast2D" parent="."]
position = Vector2(0, -17)
target_position = Vector2(-15, 0)

[node name="WallJump" type="RayCast2D" parent="."]
modulate = Color(0, 0, 0, 1)
position = Vector2(11, -17)
target_position = Vector2(-24, 0)
hit_from_inside = true

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(-11.5, -16)
antialiased = true
